# hantek-controller

./: .flake8  .gitignore  Pipfile  progress.md  psu.py  pyproject.toml  readme.md  test_psu.py
.github/scripts/: semver.py
.github/workflows/: ci.yml
src/hantekpsu/: __init__.py  psu.py
tests/: test_psu.py
